--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Queries\BudgetkontogrupperGetQuery.cs" />
     <Compile Include="Queries\BudgetkontoplanGetQuery.cs" />
     <Compile Include="Queries\DataProviderCollectionGetQuery.cs" />
+    <Compile Include="Queries\DataProviderWhoHandlesPaymentsCollectionGetQuery.cs" />
     <Compile Include="Queries\DebitorGetQuery.cs" />
     <Compile Include="Queries\DebitorlisteGetQuery.cs" />
     <Compile Include="Queries\FirmaGetQuery.cs" />
