--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -383,6 +383,7 @@
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\FoodItemProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\ForeignKeyProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\HouseholdMemberProxyTests.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\PaymentProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\StaticTextProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationInfoProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationProxyTests.cs" />
