--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Views\RegnskabslisteView.cs" />
     <Compile Include="Views\SaldoBaseView.cs" />
     <Compile Include="Views\SaldolisteBaseView.cs" />
+    <Compile Include="Views\StakeholderView.cs" />
     <Compile Include="Views\StaticTextSystemView.cs" />
     <Compile Include="Views\StaticTextView.cs" />
     <Compile Include="Views\SystemView.cs" />
