--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -82,6 +82,7 @@
     <Compile Include="HouseholdMemberAcceptPrivacyPolicyCommandHandler.cs" />
     <Compile Include="HouseholdMemberActivateCommandHandler.cs" />
     <Compile Include="HouseholdMemberAddCommandHandler.cs" />
+    <Compile Include="HouseholdMemberUpgradeMembershipCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslationAddCommandHandler.cs" />
     <Compile Include="TranslationDeleteCommandHandler.cs" />
