--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberAcceptPrivacyPolicyCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberActivateCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberAddCommandHandlerTests.cs" />
+    <Compile Include="Unittests\CommandHandlers\HouseholdMemberUpgradeMembershipCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\TranslationAddCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\TranslationDeleteCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\TranslationModifyCommandHandlerTests.cs" />
@@ -177,6 +178,7 @@
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberAcceptPrivacyPolicyCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberActivateCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberAddCommandTests.cs" />
+    <Compile Include="Unittests\Contracts\Commands\HouseholdMemberUpgradeMembershipCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\TranslationAddCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\TranslationDeleteCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\TranslationModifyCommandTests.cs" />
@@ -266,6 +268,7 @@
     <Compile Include="Unittests\Contracts\Views\KreditoplysningerViewTest.cs" />
     <Compile Include="Unittests\Contracts\Views\KreditorlisteViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\KreditorViewTests.cs" />
+    <Compile Include="Unittests\Contracts\Views\PaymentViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\PersonViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\PostnummerViewTests.cs" />
     <Compile Include="Unittests\Contracts\Views\RegnskabslisteViewTests.cs" />
