--- a/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
@@ -60,6 +60,8 @@
     <Compile Include="DataProxies\FoodWaste\IFoodItemProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IForeignKeyProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IHouseholdMemberProxy.cs" />
+    <Compile Include="DataProxies\FoodWaste\IHouseholdProxy.cs" />
+    <Compile Include="DataProxies\FoodWaste\IMemberOfHouseholdProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IPaymentProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IStaticTextProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\ITranslationInfoProxy.cs" />
