--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -389,6 +389,7 @@
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\ForeignKeyProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\HouseholdMemberProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\HouseholdProxyTests.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\MemberOfHouseholdProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\PaymentProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\StaticTextProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationInfoProxyTests.cs" />
