--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -79,6 +79,7 @@
     <Compile Include="ForeignKeyDeleteCommandHandler.cs" />
     <Compile Include="ForeignKeyModifyCommandHandler.cs" />
     <Compile Include="FoodGroupImportFromDataProviderCommandHandler.cs" />
+    <Compile Include="HouseholdAddCommandHandler.cs" />
     <Compile Include="HouseholdMemberAcceptPrivacyPolicyCommandHandler.cs" />
     <Compile Include="HouseholdMemberActivateCommandHandler.cs" />
     <Compile Include="HouseholdMemberAddCommandHandler.cs" />
@@ -119,7 +120,6 @@
       <Name>OSDevGrp.OSIntranet.Resources</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
