--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -83,6 +83,7 @@
     <Compile Include="FoodGroupTreeGetQueryHandlerForSystemView.cs" />
     <Compile Include="FoodItemCollectionGetQueryHandler.cs" />
     <Compile Include="FoodItemCollectionGetQueryHandlerForSystemView.cs" />
+    <Compile Include="HouseholdDataGetQueryHandler.cs" />
     <Compile Include="HouseholdMemberDataGetQueryHandler.cs" />
     <Compile Include="HouseholdMemberHasAcceptedPrivacyPolicyQueryHandler.cs" />
     <Compile Include="HouseholdMemberIsActivatedQueryHandler.cs" />
