--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Unittests\CommandHandlers\Core\FoodWasteHouseholdDataCommandHandlerBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Core\FoodWasteSystemDataCommandHandlerBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Core\FællesElementCommandHandlerBaseTests.cs" />
+    <Compile Include="Unittests\CommandHandlers\Core\HouseholdDataModificationCommandHandlerBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Core\HouseholdMemberDataModificationCommandHandlerBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Core\KalenderCommandHandlerBaseTests.cs" />
     <Compile Include="Unittests\CommandHandlers\Core\LogicExecutorTests.cs" />
