--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -85,6 +85,7 @@
     <Compile Include="HouseholdMemberActivateCommandHandler.cs" />
     <Compile Include="HouseholdMemberAddCommandHandler.cs" />
     <Compile Include="HouseholdMemberUpgradeMembershipCommandHandler.cs" />
+    <Compile Include="HouseholdUpdateCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslationAddCommandHandler.cs" />
     <Compile Include="TranslationDeleteCommandHandler.cs" />
