--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -164,10 +164,12 @@
     <Compile Include="Unittests\CommandHandlers\ForeignKeyModifyCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\FoodGroupImportFromDataProviderCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdAddCommandHandlerTests.cs" />
+    <Compile Include="Unittests\CommandHandlers\HouseholdAddHouseholdMemberCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberAcceptPrivacyPolicyCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberActivateCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberAddCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdMemberUpgradeMembershipCommandHandlerTests.cs" />
+    <Compile Include="Unittests\CommandHandlers\HouseholdRemoveHouseholdMemberCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\HouseholdUpdateCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\TranslationAddCommandHandlerTests.cs" />
     <Compile Include="Unittests\CommandHandlers\TranslationDeleteCommandHandlerTests.cs" />
@@ -180,10 +182,12 @@
     <Compile Include="Unittests\Contracts\Commands\ForeignKeyModifyCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\FoodGroupImportFromDataProviderCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdAddCommandTests.cs" />
+    <Compile Include="Unittests\Contracts\Commands\HouseholdAddHouseholdMemberCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberAcceptPrivacyPolicyCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberActivateCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberAddCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdMemberUpgradeMembershipCommandTests.cs" />
+    <Compile Include="Unittests\Contracts\Commands\HouseholdRemoveHouseholdMemberCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\HouseholdUpdateCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\TranslationAddCommandTests.cs" />
     <Compile Include="Unittests\Contracts\Commands\TranslationDeleteCommandTests.cs" />
