--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -61,11 +61,13 @@
     <Compile Include="Commands\ForeignKeyModifyCommand.cs" />
     <Compile Include="Commands\FoodGroupImportFromDataProviderCommand.cs" />
     <Compile Include="Commands\HouseholdAddCommand.cs" />
+    <Compile Include="Commands\HouseholdAddHouseholdMemberCommand.cs" />
     <Compile Include="Commands\HouseholdDataModificationCommandBase.cs" />
     <Compile Include="Commands\HouseholdMemberAcceptPrivacyPolicyCommand.cs" />
     <Compile Include="Commands\HouseholdMemberActivateCommand.cs" />
     <Compile Include="Commands\HouseholdMemberAddCommand.cs" />
     <Compile Include="Commands\HouseholdMemberDataModificationCommandBase.cs" />
+    <Compile Include="Commands\HouseholdRemoveHouseholdMemberCommand.cs" />
     <Compile Include="Commands\HouseholdUpdateCommand.cs" />
     <Compile Include="Commands\TranslationAddCommand.cs" />
     <Compile Include="Commands\TranslationDeleteCommand.cs" />
