--- a/OSDevGrp.OSIntranet.Services/Web.Release.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Release.config
@@ -2,6 +2,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <configSections>
     <section name="iocConfiguration" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.ConfigurationSectionHandler, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
+    <section name="basicSecurityTokenServiceConfiguration" type="OSDevGrp.OSIntranet.Security.Configuration.ConfigurationProvider, OSDevGrp.OSIntranet.Security"/>
   </configSections>
 
   <iocConfiguration>
@@ -10,26 +11,30 @@
     </containerConfigurationProviders>
   </iocConfiguration>
 
+  <basicSecurityTokenServiceConfiguration>
+    <issuerTokenName address="http://mother:8010/sts" xdt:Transform="SetAttributes(address)"/>
+  </basicSecurityTokenServiceConfiguration>
+
   <system.serviceModel>
     <bindings>
+      <wsHttpBinding>
+        <binding name="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding"/>
+        <binding name="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding"/>
+      </wsHttpBinding>
       <ws2007FederationHttpBinding>
         <binding name="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding">
           <security>
             <message>
-              <issuer address="http://localhost/osintranet/basicsecuritytokenservice.svc/WSX509" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)">
-              </issuer>
-              <issuerMetadata address="http://localhost/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)">
-              </issuerMetadata>
+              <issuer address="http://mother/osintranet/basicsecuritytokenservice.svc/WSX509" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)"/>
+              <issuerMetadata address="http://mother/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)"/>
             </message>
           </security>
         </binding>
         <binding name="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding">
           <security>
             <message>
-              <issuer address="http://localhost/osintranet/basicsecuritytokenservice.svc/WSUserName" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)">
-              </issuer>
-              <issuerMetadata address="http://localhost/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)">
-              </issuerMetadata>
+              <issuer address="http://mother/osintranet/basicsecuritytokenservice.svc/WSUserName" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(bindingConfiguration)"/>
+              <issuerMetadata address="http://mother/osintranet/basicsecuritytokenservice.svc/mex" xdt:Transform="SetAttributes(address)"/>
             </message>
           </security>
         </binding>
@@ -41,12 +46,12 @@
           <serviceCredentials>
             <issuedTokenAuthentication>
               <allowedAudienceUris xdt:Transform="Replace">
-                <add allowedAudienceUri="http://localhost/osintranet/adressekartotekservice.svc"/>
-                <add allowedAudienceUri="http://localhost/osintranet/finansstyringservice.svc"/>
-                <add allowedAudienceUri="http://localhost/osintranet/kalenderservice.svc"/>
-                <add allowedAudienceUri="http://localhost/osintranet/commonservice.svc"/>
-                <add allowedAudienceUri="http://localhost/osintranet/foodwastesystemdataservice.svc"/>
-                <add allowedAudienceUri="http://localhost/osintranet/foodwastehouseholddataservice.svc"/>
+                <add allowedAudienceUri="http://mother/osintranet/adressekartotekservice.svc"/>
+                <add allowedAudienceUri="http://mother/osintranet/finansstyringservice.svc"/>
+                <add allowedAudienceUri="http://mother/osintranet/kalenderservice.svc"/>
+                <add allowedAudienceUri="http://mother/osintranet/commonservice.svc"/>
+                <add allowedAudienceUri="http://mother/osintranet/foodwastesystemdataservice.svc"/>
+                <add allowedAudienceUri="http://mother/osintranet/foodwastehouseholddataservice.svc"/>
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
