--- a/OSDevGrp.OSIntranet.Services/Web.Release.config
+++ b/OSDevGrp.OSIntranet.Services/Web.Release.config
@@ -15,6 +15,12 @@
     <issuerTokenName address="http://mother:8010/sts" xdt:Transform="SetAttributes(address)"/>
   </basicSecurityTokenServiceConfiguration>
 
+  <connectionStrings>
+    <clear/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb; DATABASE=foodwaste; UID=ODBC" xdt:Transform="SetAttributes(connectionString)" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
@@ -40,6 +46,11 @@
         </binding>
       </ws2007FederationHttpBinding>
     </bindings>
+    <client>
+      <endpoint name="AdresseRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
+      <endpoint name="FællesRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FællesRepositoryService" xdt:Transform="SetAttributes(address)" xdt:Locator="Match(name)"/>
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="OSDevGrp.OSIntranet.IoCServiceBehavior">
