--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -259,17 +259,17 @@
       </service>
     </services>
     <client>
-      <endpoint name="AdresseRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
+      <endpoint name="AdresseRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/AdresseRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IAdresseRepositoryService">
         <identity>
           <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.AdresseRepositoryService"/>
         </identity>
       </endpoint>
-      <endpoint name="FinansstyringRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
+      <endpoint name="FinansstyringRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FinansstyringRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFinansstyringRepositoryService">
         <identity>
           <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FinansstyringRepositoryService"/>
         </identity>
       </endpoint>
-      <endpoint name="FællesRepositoryService" address="net.tcp://Mother:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
+      <endpoint name="FællesRepositoryService" address="net.tcp://mother:7000/OSIntranet/DataAccess/FællesRepositoryService" behaviorConfiguration="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior" binding="netTcpBinding" bindingConfiguration="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding" contract="OSDevGrp.OSIntranet.DataAccess.Contracts.Services.IFællesRepositoryService">
         <identity>
           <servicePrincipalName value="OSDevGrp.OSIntranet.DataAccess.Services.Implementations.FællesRepositoryService"/>
         </identity>
