--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -65,8 +65,8 @@
   
   <connectionStrings>
     <clear />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC" />
-    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb; DATABASE=foodwastedev; UID=ODBC" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb;DATABASE=oswebdb;UID=ODBC;Pooling=True" />
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb;DATABASE=foodwastedev;UID=ODBC;Pooling=True" />
   </connectionStrings>
   
   <appSettings>
